--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -31,8 +31,7 @@
     "editor.formatOnSave": true
   },
   "editor.codeActionsOnSave": {
-    "quickfix.biome": "explicit",
-    "source.organizeImports.biome": "explicit"
+    "source.fixAll.biome": "explicit"
   },
   "biome.enabled": true,
   "emmet.includeLanguages": {
